--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <!-- Font Awesome -->
-  <script
-  src="https://kit.fontawesome.com/4c4ceebb82.js"
-  crossorigin="anonymous"
-></script>
-<!-- Google Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;800&display=swap"/>
+  <script src="https://kit.fontawesome.com/4c4ceebb82.js" crossorigin="anonymous"></script>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;800&display=swap" />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="main.css">
 
@@ -20,25 +19,27 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <title>Frontend Mentor | Advice generator app</title>
 
-  
+
 </head>
+
 <body>
   <div class="container">
-   <div class="card">
-    <h4 id="advice-id">ADVICE # <span class="advice-id"></span></h4>
-    <P id="advice-text"><q></q></P>
-    <img id="pattern"src="./images/pattern-divider-desktop.svg" alt="">
-    <img  id="dice" src="./images/icon-dice.svg">
-   </div>
-  
- </div>
+    <div class="card">
+      <h4 id="advice-id">ADVICE # <span class="advice-id"></span></h4>
+      <P id="advice-text"><q></q></P>
+      <img id="pattern" src="./images/pattern-divider-desktop.svg" alt="">
+      <img id="dice" src="./images/icon-dice.svg">
+    </div>
 
-  
-  
+  </div>
+
+
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://www.linkedin.com/in/naglaa-hamdi-9a56b1205/">Naglaa Hamdi</a>.
   </div>
   <script src="main.js"></script>
 </body>
+
 </html>
